--- a/folwer/网站首页.html
+++ b/folwer/网站首页.html
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="smallBox">
-                    <img src="./images/小彩瓷.jpg." alt="">
+                    <img src="./images/小彩瓷.jpg" alt="">
                     <p>小彩瓷花瓶</p>
                     <p1>花艺师与您一同分享素馨花卉给您的生活带去的花香世界花艺师与您一同分享素馨花卉给您的生活带去的花香世界</p1>
                     <div class="button">查看详情</div>
