--- a/folwer/网站首页.html
+++ b/folwer/网站首页.html
@@ -38,7 +38,7 @@
     <div class="bottom">
         <div class="left">
             <a href="">
-                <img src="./images/上一个.png" alt="" style="width:40px;height:40px;">
+                <img src="./images/on.png" alt="" style="width:40px;height:40px;">
             </a>
         </div>
         <div class="box">
@@ -80,7 +80,7 @@
         </div>
         <div class="right">
             <a href="">
-                <img src="./images/上一个.png" alt="" style="width:40px;height:40px;">
+                <img src="./images/next.png" alt="" style="width:40px;height:40px;">
             </a>
         </div>
     </div>
